objects/ramana__c.object
<CustomObject>
    <fields>
        <fullName>dept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dept</label>
        <referenceTo>dept__c</referenceTo>
        <relationshipLabel>ramanas</relationshipLabel>
        <relationshipName>ramanas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>emails</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>surname__c</fullName>
        <label>surname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ramana</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>dept__c</columns>
        <columns>email__c</columns>
        <columns>surname__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ramanas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>